# Padel

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/diagrams/: class.puml
scripts/: launch_and_login.py
src/padel/: utils.py
src/padel/models/: __init__.py  models.py
src/padel/scraping/: __init__.py  scrapers.py
tests/: conftest.py
tests/acceptance/: login.feature  test_login.py
